- added env variable for main/test conf generation

--- a/helper/harmony/docker-compose.yml
+++ b/helper/harmony/docker-compose.yml
@@ -9,4 +9,6 @@ services:
       - ./harmony
       - "config"
       - "dump"
+      - "--network"
+      - "${NETWORK}"
       - "./config/harmony.conf"
