--- a/helper/monitoring/prometheus_example.yml
+++ b/helper/monitoring/prometheus_example.yml
@@ -20,10 +20,15 @@ rule_files:
 # Here it's Prometheus itself.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: "prometheus"
-
+  - job_name: "harmony-node"
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
-
     static_configs:
-      - targets: ["localhost:9900"]
+      - targets: ["{your_node_ip}:9900", "{your_node_ip}:5000"]
+
+  # Might as well have prometheus montior itself too
+  - job_name: "prometheus"
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
+    static_configs:
+      - targets: ["localhost:9090"]
