- added node exporter service

--- a/helper/monitoring/docker-compose.yml
+++ b/helper/monitoring/docker-compose.yml
@@ -1,9 +1,27 @@
 version: "3"
 
 services:
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    restart: always
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    expose:
+      - 9100
+    networks:
+      - monitoring
   prometheus:
     container_name: prometheus
     image: prom/prometheus
+    restart: always
     ports:
       - "9090:9090"
     volumes:
@@ -12,6 +30,7 @@ services:
       - monitoring
   grafana:
     container_name: grafana
+    restart: always
     image: grafana/grafana-oss:latest
     ports:
       - "3000:3000"
